# aperture

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml  web.yml
design/: INDEX.md  actors.md  architecture.md  claude-design-brief.md  design-tokens.md  gen3-comparison.md  implementation-plan.md  instruction-path-model.md  library-survey.md  portal-open-questions.md  portal-requirements.md  portal-vision-handoff.md  prior-art.md  vision.md
design/decisions/: ADR-0001-adopt-adrs.md  ADR-0002-generic-not-domain-specific.md  ADR-0003-config-is-linkml-in-hippo.md  ADR-0004-three-levels-of-configurability.md  ADR-0005-config-accessible-to-humans-and-llms.md  ADR-0006-components-runtime-reloaded.md  ADR-0007-user-and-system-components-same-artifact.md  ADR-0008-components-hold-no-authority.md  ADR-0009-components-emit-view-descriptions.md  ADR-0010-view-description-vocabulary.md  ADR-0011-component-execution-runtime.md  ADR-0012-config-layering.md  ADR-0013-agent-loop-local-vs-remote.md  ADR-0014-application-architecture.md  ADR-0015-composability-and-cross-links.md  ADR-0016-defer-bridge-build-aperture-first.md  ADR-0017-data-plane-vs-control-plane.md  ADR-0018-agents-act-with-user-delegated-authority.md  ADR-0019-per-user-llm-provider-keys.md  ADR-0020-llm-conversations-are-provenance-events.md  ADR-0021-defer-in-app-chat-mcp-agent-first.md  ADR-0030-frontend-stack.md  (+15 more)
tests/: test_backends.py
web/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+89 files in other folders)
