[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bass-aperture"
version = "0.1.0"
description = "BASS Aperture - AI-native data & workflow explorer over the BASS domain graph (Hippo)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
local = ["bass-hippo"]
dev = ["pytest>=7.0", "pytest-cov"]

# NOTE: no [project.scripts] `bass` entry — the CLI is superseded.
# Web/portal + component-runtime deps will be added as the portal is built.

[tool.hatch.build.targets.wheel]
packages = ["src/aperture"]
